[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bgm/highscore.mp3" type="AudioStream" id=1]
[ext_resource path="res://assets/fonts/PressStart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/NewHighScore.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="NewHighScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -406, -36 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 64.0
margin_bottom = 112.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "ENTER YOUR NAME !"
align = 1

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.0
margin_top = -47.0
margin_right = 427.0
margin_bottom = 47.0
custom_constants/vseparation = 20
custom_constants/hseparation = 70
columns = 3

[node name="ScoreLabel" type="Label" parent="GridContainer"]
margin_right = 192.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SCORE"
align = 2

[node name="LevelLabel" type="Label" parent="GridContainer"]
margin_left = 262.0
margin_right = 422.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "LEVEL"
align = 2

[node name="NameLabel" type="Label" parent="GridContainer"]
margin_left = 492.0
margin_right = 886.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "NAME"
align = 1

[node name="ScoreLabel2" type="Label" parent="GridContainer"]
margin_top = 57.0
margin_right = 192.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
text = "000000"
align = 1

[node name="LevelLabel2" type="Label" parent="GridContainer"]
margin_left = 262.0
margin_top = 57.0
margin_right = 422.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
text = "1"
align = 2

[node name="NameEdit" type="LineEdit" parent="GridContainer"]
margin_left = 492.0
margin_top = 52.0
margin_right = 886.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
max_length = 12

[node name="SendButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -102.0
margin_right = -48.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 4 )
text = "OK"
flat = true

[node name="SendingLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -64.0
margin_right = 160.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 3 )
text = "SENDING..."

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
